# renamer

./: Cargo.toml  README.md
.github/: renovate.json
src/: action.rs  file.rs  main.rs
