[package]
name = "renamer"
version = "0.2.0"
authors = ["Julian Wiesler <wiesleju@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.26", default-features = false }
regex = "1.10.4"
tempfile = "3.10.1"
confy = "0.6.1"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8"
natural_sort = { git = "https://github.com/jwiesler/natural-sort-rs" }
walkdir = "2.5"
